# Agentic-RAG

./: .gitignore  pyproject.toml
.github/workflows/: eval.yml
eval/: ci_check.py  fixtures_golden.jsonl  golden.jsonl  run_eval.py
eval/fixtures/: blog-flipper-zero-my-first-hacking-tool.md  blog-from-cloud-to-self-hosted.md  blog-starting-my-cybersecurity-journey.md
eval/results/: 20260619-003805.json  20260619-004842.json  20260619-011022.json  20260619-011715.json  20260619-012741.json  20260619-014337.json
src/: agent.py  api.py  ask.py  chunking.py  config.py  export_posts.py  ingest.py  llm.py  retrieval.py
