[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.2",
    "fastembed>=0.8.0",
    "google-genai>=2.8.0",
    "langfuse>=4.9.1",
    "langgraph>=1.2.6",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "uvicorn>=0.49.0",
]
